@@ -1,6 +1,7 @@
 2.5 (Upcoming)
 
 o AFM and glyphlists loaded from compressed sources
+o Environment variable CAMLPDF_REPRODUCIBLE_IDS
 
 2.4 (June 2021)
 
